tests/samples/positive/types/string_unicode_escape.ax
module string_unicode_escape;

const TEXT: str = "hi \u{03A9}\0";
const C_TEXT: *const u8 = c"ffi \u{03A9}";

fn main() -> i32 {
    let text: str = TEXT;
    let c_text: *const u8 = C_TEXT;
    if ptraddr(c_text) == cast[usize](0) {
        return 1;
    }
    return 0;
}
